--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"laravelcollective/html": "~5.0"
+		"laravelcollective/html": "~5.0",
+		"barryvdh/laravel-ide-helper": "~2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
