--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"laravelcollective/html": "~5.0",
-		"barryvdh/laravel-ide-helper": "~2.0"
+		"barryvdh/laravel-ide-helper": "~2.0",
+		"laravelcollective/annotations": "~5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
